2006-05-28  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.6 released.

	* configure.ac: Bump version.

	* aclocal.m4 (AC_PATH_LISPDIR): Apply replacement in
	$lispdir_default twice.

2006-03-14  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in: Implement DESTDIR support.

	* INSTALL: Mention DESTDIR support.

2005-12-28  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.1.6-pre).

2005-12-11  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.5 released.

	* configure.ac: Bump version.

	* INSTALL: Point to Posix environments for installation under MS
	Windows.

2005-12-02  Michael Albinus  <michael.albinus@gmx.de>

	* INSTALL, configure.ac: We depend on GNU texinfo 4.6.

2005-11-29  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Remove creation of info directory.

	* Makefile.in (MANIFEST): Call ./config.status in order to
	regenerate $(CONFIG_FILES).

2005-10-23  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.1.5-pre).

	* Makefile.in (clean): Cleanup also subdirectory test.
	(MANIFEST): Exclude tramp2 and .cvsignore.

2005-10-18  Michael Albinus  <michael.albinus@gmx.de>

	* aclocal.m4 (AC_PATH_LISPDIR, AC_PATH_INFODIR): `datadir',
	`lispdir' and `infodir' should still contain environment
	variables, which can be changed during make. `lispdir_default' and
	`infodir_default' must be expanded for the Tramp manual.

2005-10-13  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.4 released.

	* configure.ac: Bump version.

2005-10-11  Michael Albinus  <michael.albinus@gmx.de>

	* aclocal.m4 (AC_PATH_LISPDIR, AC_PATH_INFODIR): Rearrange
	substitutions that they are accepted with older shell versions.

2005-10-11  Steve Youngs  <steve@sxemacs.org>

	* Makefile.XEmacs (REQUIRES): Remove fsf-compat, add
	sh-script (for executable-find).

2005-10-09  Michael Albinus  <michael.albinus@gmx.de>

	* INSTALL: Provide working options for installing on MS Windows.
