@@ -1,3 +1,7 @@
+2006-05-31  Michael Albinus  <michael.albinus@gmx.de>
+
+	* configure.ac: Bump version (to 2.1.7-pre).
+
 2006-05-28  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.1.6 released.
